--- a/fullstack/capstone/public/index.html
+++ b/fullstack/capstone/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/khula" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/learninglings-4" rel="stylesheet">
+    <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
