--- a/fullstack/capstone/public/index.html
+++ b/fullstack/capstone/public/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="https://fonts.cdnfonts.com/css/khula" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/learninglings-4" rel="stylesheet">
-    <link rel="stylesheet" href="css/stylesheet.css">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <link href="https://fonts.cdnfonts.com/css/rilu" rel="stylesheet" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link href="https://fonts.cdnfonts.com/css/khula" rel="stylesheet" />
+    <link
+      href="https://fonts.cdnfonts.com/css/learninglings-4"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/stylesheet.css" />
+    <link href="https://fonts.cdnfonts.com/css/nunito-sans" rel="stylesheet" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
