--- a/fullstack/capstone/public/index.html
+++ b/fullstack/capstone/public/index.html
@@ -24,7 +24,12 @@
         continue.</strong
       >
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <cart-modal></cart-modal>
+    </div>
+    <script src="https://unpkg.com/vue@3.2.20"></script>
+    <script src="main.js"></script>
+    
     <!-- built files will be auto injected -->
   </body>
 </html>
