--- a/fullstack/capstone/public/index.html
+++ b/fullstack/capstone/public/index.html
@@ -10,6 +10,8 @@
       href="https://fonts.cdnfonts.com/css/learninglings-4"
       rel="stylesheet"
     />
+    <link href="https://fonts.cdnfonts.com/css/xscale" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/arya" rel="stylesheet">
     <link rel="stylesheet" href="css/stylesheet.css" />
     <link href="https://fonts.cdnfonts.com/css/sf-mono" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/nunito-sans" rel="stylesheet" />
