--- a/fullstack/capstone/public/index.html
+++ b/fullstack/capstone/public/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.cdnfonts.com/css/learninglings-4"
       rel="stylesheet"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/xscale" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/arya" rel="stylesheet">
     <link rel="stylesheet" href="css/stylesheet.css" />
@@ -31,7 +32,8 @@
     </div>
     <script src="https://unpkg.com/vue@3.2.20"></script>
     <script src="main.js"></script>
-    
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script> -->
     <!-- built files will be auto injected -->
   </body>
 </html>
